# TamisTool

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: CONFIGURATION.md  CONTRIBUTING.md  REPORT_GUIDE.md  SCAN_TYPES.md
tamis/: __init__.py  __main__.py  config.py
tamis/auth/: provider.py  token_cache.py
tamis/catalog/: __init__.py  tables.json
tamis/checks/: rules.py
tamis/cli/: client.py  config.py  report.py  scan.py
tamis/db/: models.py  session.py
tamis/kusto/: __init__.py  client.py  queries.py
tamis/report/: exporter.py
tamis/report/templates/: report.html
tests/: test_auth.py  test_catalog.py  test_credentials.py  test_db_modes.py
