# Copyright (c) 2024 hexbinedit.io
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamis"
version = "0.1.0"
description = "Kusto Table Analyzer — SIEM visibility auditing tool by hexbinedit.io"
authors = [{ name = "hexbinedit.io", email = "contact@hexbinedit.io" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["siem", "sentinel", "kusto", "security", "visibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer[all]>=0.12",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "azure-kusto-data>=4.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
tamis = "tamis.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tamis*"]

[tool.setuptools.package-data]
"tamis.catalog" = ["*.json"]
"tamis.report.templates" = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tamis --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
